examples/exploit-example/klee-out-0/test000001.exec.err
Error: invalid function pointer
File: test.c
Line: 48
assembly.ll line: 692
Stack: 
	#000000692 in __user_main (argc=1, argv=66515328) at test.c:48
	#100000388 in __uClibc_main (main=90154504, argc=1, argv=66515328, app_init=0, app_fini=0, rtld_fini=0, stack_end=0) at libc/misc/internals/__uClibc_main.c:401
	#200000563 in main (=1, =66515328)
